small update to E2

--- a/STEM/Science/Chemistry/OChem/Reactions/E1.md
+++ b/STEM/Science/Chemistry/OChem/Reactions/E1.md
@@ -8,6 +8,7 @@ The slow step is the leaving group
 	- Heat is the most important distinguishing feature for E1 reactions.
 	- This is sometimes indicated with a $\Delta$
 - Protic solvent
+	- Because it a protic solvent weaker and larger nucleophiles work better. 
 - Weak [[Nucleophiles and Electrophiles#Bases]]
 	- This is a uncharged molecule or halogen that attacks a hydrogen
 # Reaction Progress
