--- a/STEM/Science/Chemistry/OChem/Reactions/E2.md
+++ b/STEM/Science/Chemistry/OChem/Reactions/E2.md
@@ -10,6 +10,7 @@ Strong [[Nucleophiles and Electrophiles#Bases]]
 # Reaction Progress
 - All of the reaction occurs in one step
 - The attacking group attacks the hydrogen
+	- The hydrogen must be anti to the bond molecule that is leaving. This means that it must be a wedge and a dash or both dashes
 - The hydrogen gives its electron to form a pi bond with the carbon attached to the leaving group. 
 - The leaving group leaves
 - Products
